--- a/tasks/task4/index.html
+++ b/tasks/task4/index.html
@@ -13,8 +13,26 @@
 
     <h1 class="title">TODO LIST</h1>
 
+        <form class="test">
+<!--            <label for="text">Text</label>-->
+<!--            <input id="text" required type="text" class="search-input" placeholder="Search note...">-->
+
+            <label for="email">text</label>
+            <input id="email" type="text"/>
+            <div></div>
+
+<!--            <label for="tel">tel</label>-->
+<!--            <input id="tel" required type="tel"/>-->
+
+<!--            <label for="number">number</label>-->
+<!--            <input id="number" type="number"/>-->
+
+            <button class="form" type="submit">submit</button>
+        </form>
+
     <header class="controls">
-        <input type="text" class="search-input" placeholder="Search note...">
+
+
         <div class="dropdown-container">
             <button class="dropdown-toggle">
                 <img src="./assers/select.svg" alt="">
